--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -69,6 +69,8 @@
                     android:layout_height="match_parent"
                     android:layout_marginStart="2dp"
                     android:layout_marginTop="4dp"
+                    android:src="@drawable/ic_fav"
+                    android:scaleType="centerCrop"
                     android:layout_marginEnd="2dp"
                     android:layout_marginBottom="2dp" />
             </androidx.cardview.widget.CardView>
@@ -141,8 +143,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginStart="28dp"
-
-
+                android:src="@drawable/ic_add_cart"
                 app:layout_constraintBottom_toBottomOf="@id/review_value_tv"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/review_value_tv" />
