--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -21,17 +21,18 @@
             android:background="@color/white"
             android:paddingBottom="10dp">
 
+
             <ImageView
                 android:id="@+id/product_img"
                 android:layout_width="180dp"
                 android:layout_height="120dp"
                 android:scaleType="centerCrop"
+                android:src="@color/cardview_dark_background"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-
                 tools:ignore="ContentDescription" />
-
 
             <TextView
                 android:id="@+id/product_name"
