Finish ViewModel & create Adapter and use Diffutil to update list use good performance

--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -5,7 +5,9 @@
 
     <data>
 
-
+        <variable
+            name="product"
+            type="com.route.domain.models.Product" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
